gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-register_attr.rs
#![register_attr(attr)] // { dg-error ".E0658." "" { target *-*-* } }

fn main() {}

